unpackaged/main/default/objects/Contract/fields/AccountBillingName__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingName__c</fullName>
    <inlineHelpText>Например, &quot;Общество с ограниченной ответственностью «Бегемот»&quot;</inlineHelpText>
    <label>Юридическое имя контрагента (полностью)</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>