unpackaged/main/default/objects/Contract/fields/AccountCEO__c.field-meta.xml
<CustomField>
    <fullName>AccountCEO__c</fullName>
    <inlineHelpText>Например, в лице &quot;генерального директора Обломова Ильи Ильича&quot;</inlineHelpText>
    <label>В лице</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>