unpackaged/main/default/objects/Contract/fields/AccountCEOAct__c.field-meta.xml
<CustomField>
    <fullName>AccountCEOAct__c</fullName>
    <defaultValue>&quot;Устава&quot;</defaultValue>
    <inlineHelpText>Например, &quot;Устава&quot;</inlineHelpText>
    <label>Действующего на основании</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>