unpackaged/main/default/objects/Contract/fields/CompanyDeliverTo__c.field-meta.xml
<CustomField>
    <fullName>CompanyDeliverTo__c</fullName>
    <label>Грузополучатель</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>