unpackaged/main/default/objects/Contract/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <inlineHelpText>Первая буква - название нашего юрлица, затем вторая буква (без пробелов) - первая буква названия юрлица контрагента, затем, без пробелов, слеш и дата подписания договора</inlineHelpText>
    <label>Номер договора</label>
    <length>16</length>
    <type>Text</type>
</CustomField>