unpackaged/main/default/objects/Contract/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>Адрес пункта поставки</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>