unpackaged/main/default/objects/Contract/fields/DeliveryTime__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTime__c</fullName>
    <label>Срок поставки</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>рабочих дней</fullName>
            </value>
            <value>
                <fullName>календарных дней</fullName>
            </value>
            <value>
                <fullName>календарных месяцев</fullName>
            </value>
            <value>
                <fullName>до</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>