unpackaged/main/default/objects/Contract/fields/FormType__c.field-meta.xml
<CustomField>
    <fullName>FormType__c</fullName>
    <label>Форма договора</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Договор с шеф-монтажом</fullName>
                <default>true</default>
                <label>Договор с шеф-монтажом</label>
            </value>
            <value>
                <fullName>Договор без шеф-монтажа</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>