unpackaged/main/default/objects/Contract/fields/Partpayment__c.field-meta.xml
<CustomField>
    <fullName>Partpayment__c</fullName>
    <label>Оплата при готовности оборудования</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>