unpackaged/main/default/objects/Contract/fields/PaymentDelayText__c.field-meta.xml
<CustomField>
    <fullName>PaymentDelayText__c</fullName>
    <defaultValue>&quot;окончательного расчета&quot;</defaultValue>
    <label>В случае задержки ден. средств в размере</label>
    <length>255</length>
    <type>Text</type>
</CustomField>