unpackaged/main/default/objects/Contract/fields/PostPayment__c.field-meta.xml
<CustomField>
    <fullName>PostPayment__c</fullName>
    <label>Оплата после отгрузки (процент)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>