unpackaged/main/default/objects/Contract/fields/Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Prepayment__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Размер предоплаты (процент)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>