unpackaged/main/default/objects/Contract/fields/Prepayment_days__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_days__c</fullName>
    <label>Срок предоплаты (дней)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>