unpackaged/main/default/objects/Contract/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Проект</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Договоры</relationshipLabel>
    <relationshipName>ProjectNameForContract</relationshipName>
    <type>Lookup</type>
</CustomField>