unpackaged/main/default/objects/Contract/fields/Puskonaladka2__c.field-meta.xml
<CustomField>
    <fullName>Puskonaladka2__c</fullName>
    <label>Пусконаладка2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>