unpackaged/main/default/objects/Contract/fields/Puskonaladka__c.field-meta.xml
<CustomField>
    <fullName>Puskonaladka__c</fullName>
    <defaultValue>&quot;??&quot;</defaultValue>
    <label>Пусконаладка</label>
    <length>255</length>
    <type>Text</type>
</CustomField>