unpackaged/main/default/objects/Contract/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Склад самовывоза</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DeliveryCondition__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>г.Бердск, Зелёная Роща 1, территория ОАО &quot;БЭМЗ&quot;</fullName>
            </value>
            <value>
                <fullName>г.Москва, ул.Угрешская, 2 стр.98</fullName>
            </value>
            <value>
                <fullName>г.Москва, ул.Шарикоподшипниковская, 4, к.1А</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>