unpackaged/main/default/objects/Contract/fields/ShortBillingContractorName__c.field-meta.xml
<CustomField>
    <fullName>ShortBillingContractorName__c</fullName>
    <inlineHelpText>Например, ООО &quot;Бегемот&quot;</inlineHelpText>
    <label>Юридическое имя контрагента (краткое)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>