unpackaged/main/default/objects/Contract/fields/SignatureInitials__c.field-meta.xml
<CustomField>
    <fullName>SignatureInitials__c</fullName>
    <inlineHelpText>Например, &quot;И.И. Обломов&quot;</inlineHelpText>
    <label>Инициалы и фамилия подписывающего лица</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>