unpackaged/main/default/objects/Contract/fields/SignerPosition__c.field-meta.xml
<CustomField>
    <fullName>SignerPosition__c</fullName>
    <inlineHelpText>Например, Директор</inlineHelpText>
    <label>Должность подписывающего лица</label>
    <length>255</length>
    <type>Text</type>
</CustomField>