unpackaged/main/default/objects/Contract/fields/Smeta__c.field-meta.xml
<CustomField>
    <fullName>Smeta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Смета</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote.Opportunity.Id</field>
            <operation>equals</operation>
            <valueField>$Source.ProjectName__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Контракты</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>