unpackaged/main/default/objects/Contract/fields/SpecificationDate__c.field-meta.xml
<CustomField>
    <fullName>SpecificationDate__c</fullName>
    <label>Дата создания спецификации</label>
    <required>true</required>
    <type>Date</type>
</CustomField>