unpackaged/main/default/objects/Contract/fields/SpecificationNumber__c.field-meta.xml
<CustomField>
    <fullName>SpecificationNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Номер спецификации</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>