unpackaged/main/default/objects/Contract/fields/SpecificationType__c.field-meta.xml
<CustomField>
    <fullName>SpecificationType__c</fullName>
    <label>Тип спецификации</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Проектное решение</fullName>
            </value>
            <value>
                <fullName>Медоборудование</fullName>
            </value>
            <value>
                <fullName>Экспорт</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>