unpackaged/main/default/objects/Contract/fields/TionPersonToSignContract__c.field-meta.xml
<CustomField>
    <fullName>TionPersonToSignContract__c</fullName>
    <label>Подпись со стороны Тион от</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>М.А. Амелькин</fullName>
            </value>
            <value>
                <fullName>А.С. Жучков</fullName>
            </value>
            <value>
                <fullName>В. В. Салимгареев</fullName>
                <default>true</default>
                <label>В. В. Салимгареев</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>