unpackaged/main/default/objects/Contract/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Договор</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Контракты</relationshipLabel>
    <relationshipName>mDWI</relationshipName>
    <type>Lookup</type>
</CustomField>