unpackaged/main/default/objects/Contract/validationRules/percent_summ.validationRule-meta.xml
<ValidationRule>
    <fullName>percent_summ</fullName>
    <active>true</active>
    <errorConditionFormula>(PostPayment__c  +  Prepayment__c  +  Partpayment__c)  &lt;&gt; 1</errorConditionFormula>
    <errorDisplayField>PostPayment__c</errorDisplayField>
    <errorMessage>Сумма процентов оплаты должна составлять 100%</errorMessage>
</ValidationRule>