unpackaged/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>UserTION__c</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Все контракты</label>
    <language>ru</language>
</ListView>