unpackaged/main/default/objects/Contract/listViews/X2013.listView-meta.xml
<ListView>
    <fullName>X2013</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>ProjectName__c</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>UserTION__c</columns>
    <columns>Smeta__c</columns>
    <filterScope>Everything</filterScope>
    <label>договора2013</label>
    <language>ru</language>
</ListView>